deployment-replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springpeople-deployment-replicaset
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springpeople
  template:
    metadata:
      labels:
        app: springpeople
    spec:
      containers:
      - name: springpeople-container
        image: nginx
