memory-limits.yml
apiVersion: v1
kind: Pod
metadata:
  name: springpeople-memory
spec:
  containers:
  - name: springpeople-container
    image: jenkins/jenkins
    resources:
      limits:
        memory: "400Mi"
      requests:
        memory: "200Mi"
