example-ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world-2.info
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080

          - path: /v2
            backend:
              serviceName: web2
              servicePort: 8080
